# AutoAudit

./: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  fly.preview.toml  iam_policy.json  package-lock.json  package.json  py_test.py  test_regular_backups.py
backend-api/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend-api/alembic/: env.py
backend-api/alembic/versions/: a9befc7a716c_add_manual_verification_table.py  b1c2d3e4f567_create_compliance_tables.py  c3d4e5f6g789_add_m365_connection_update_scan.py  d4e5f6g7h890_database_architecture_revision.py  e5b1c9d8a7f0_add_evidence_validation_table.py  f6c7d8e9f012_add_evidence_validation_table.py  f6c7d8e9f012_make_evidence_validation_int_pk_and_user_fk.py  h1i2j3k4l567_expand_oauth_account_token_columns.py  j1k2l3m4n567_add_contact_us_tables.py  j2k3l4m5n678_add_user_settings_table.py
backend-api/app/: main.py
backend-api/app/api/: __init__.py
backend-api/app/core/: config.py  errors.py  logging.py  middleware.py  users.py
backend-api/app/db/: init_db.py
backend-api/app/models/: __init__.py  aws_connection.py  azure_connection.py  compliance.py  contact.py  evidence_validation.py  exports.py  gcp_connection.py  m365_connection.py  manual_verification.py  oauth_account.py  platform.py  scan_result.py  strategy.py  user.py  user_settings.py
backend-api/app/schemas/: __init__.py  audit.py  benchmark.py  contact.py  evidence_validation.py  m365_connection.py  scan.py  (+6 more)
backend-api/backend/: test-server.js
backend-api/docker/: backend.Dockerfile
(+867 files in other folders)
