[project]
name = "backend-api"
version = "0.1.0"
description = "AutoAudit API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
