[project]
name = "backend-api"
version = "0.1.0"
description = "AutoAudit API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.1",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
]
